<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.mujin</groupId>
        <artifactId>mujin-framework</artifactId>
        <version>1.0.0-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <groupId>com.mujin.commons</groupId>
    <artifactId>mujin-commons</artifactId>
    <packaging>pom</packaging>
    <name>mujin-commons</name>
    <modules>
        <module>commons-csv</module>
        <module>commons-lang</module>
        <module>commons-web</module>
    </modules>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.mujin.commons</groupId>
                <artifactId>commons-lang</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mujin.commons</groupId>
                <artifactId>commons-web</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mujin.commons</groupId>
                <artifactId>commons-csv</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>


</project>